# FraudShieldAI

./: .gitignore  ProblemStatement.txt  README.md  main.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
app/: streamlit_app.py  utils.py
app/pages/: dashboard.py  model_report.py  predict.py
configs/: models.yaml  pipeline.yaml
data/: sample_test.csv
notebooks/: 01_eda.ipynb
outputs/metrics/: model_comparison.csv  model_comparison.md
outputs/models/: fnn.pt  label_encoders.joblib  logistic_regression.joblib  logistic_regression_optuna_study.joblib  lstm.pt  model_names.joblib  numeric_cols.joblib  random_forest_optuna_study.joblib  scaler.joblib  target_encoders.joblib  xgboost_optuna_study.joblib
outputs/shap/: shap_values_fnn.npy  shap_values_logistic_regression.npy  shap_values_random_forest.npy  shap_values_xgboost.npy
src/data/: features.py  preprocessing.py
src/evaluation/: evaluator.py  metrics.py
src/models/: ensemble.py  fnn.py  lstm.py  supervised.py  trainer.py
src/utils/: config.py  helpers.py
tests/: conftest.py  test_features.py  test_metrics.py  test_preprocessing.py
