[metadata]
name = fraudshieldai
version = 0.1.0
description = ML-powered fraud detection system
author = Mahesh Gadi
python_requires = >=3.10

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .
include =
    src*
    app*

[coverage:run]
source = src
omit =
    tests/*
    notebooks/*

[coverage:report]
show_missing = True
skip_empty = True
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
